@@ -3,10 +3,10 @@ custom/paginae/default/management
 ;; pver
 1
 ;; name
-Character Sheet
+Chat Window
 ;; preq (ignored)
 
 ;; hk
-84
+67
 ;; ad (Don't change ads...)
 0
