@@ -1,0 +1,1 @@
+Toggle Chat window
