@@ -69,12 +69,15 @@
     - The buttons to bring up windows have been moved to the menugrid under management ('m'). You can still toggle them
       via the old keybinds as well
         - Equipment ('e')  Ctrl+E
-        - Character Sheet ('c') Ctrl+T
+        - Character Sheet ('t') Ctrl+T
         - Options ('o') Ctrl+O
         - Kith & Kin ('k') Ctrl+B
         - Map ('m') Ctrl+A
         - Inventory ('i') Tab
         - Minimap ('n')
+        - Chat ('c') Ctrl + C
     - Bumped the radius circle height back to 10 units like default
     - Control + hover over party member icons to see how far they are, limited to 1000 tiles..
     - Quest log is now part of a window and movable
+    - Chat is now part of a window and movable
+
